--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,5 @@
 .profile__name {
+  max-width: 294px;
   grid-area: name;
   margin: 0px;
   padding: 0px;
@@ -8,6 +9,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  transition: max-width 2s ease;
 }
 
 @media screen and (max-width: 603px) {
@@ -20,6 +22,7 @@
 
 @media screen and (max-width: 400px) {
   .profile__name {
+    max-width: 190px;
     font-size: 27px;
     line-height: 33px;
   }
